# ML_Algos_from_scratch

./: .gitignore  README.md  pyproject.toml
ml_scratch/: classifications.py  linear_reg.py  regressions.py
tests/: test_classifications.py  test_linear_reg.py  test_regressions.py
