[tool.poetry]
name = "ml-scratch"
version = "0.1.0"
description = ""
authors = ["Dripto Saha <sahadripto21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
